--- a/Whack-A-Mole/finalproject.css
+++ b/Whack-A-Mole/finalproject.css
@@ -97,4 +97,14 @@
 .mole6{
     
 }
-
+#slideUp{
+    width:100px;
+    height:40px;
+    border-radius:10px;
+    background-color:darkgoldenrod;
+    color:white;
+    font-size:20px;
+    text-align:center;
+    line-height:40px;
+    
+}
